# video-audio-subtitle

./: .gitignore  SKILL.md  pyproject.toml
fixtures/: test_short.srt  test_short.zh-CN.srt
scripts/: media_subtitle.py
scripts/asr/: __init__.py  engine.py  pipeline.py  render.py  types.py
scripts/shared/: __init__.py  config.py  model_path.py  platform.py
tests/: test_media_subtitle.py
